# bawbel-integrations

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  action.yml  pyproject.toml  test_skill.md
bawbel_hooks/: __init__.py  bawbel_pre_commit.py
examples/: Jenkinsfile  azure-devops.yml  basic.yml  bitbucket-pipelines.yml  circleci.yml  gitlab-ci.yml  sarif.yml
pre_commit/: README.md
vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  bawbel-scanner-1.0.0.vsix  package-lock.json  package.json  tsconfig.json
vscode/src/: extension.ts
vscode/src/core/: cli.ts  parser.ts  remediation.ts  suppressions.ts  types.ts
vscode/src/features/: codeActions.ts  diagnostics.ts  scanner.ts
vscode/src/ui/: reportPanel.ts  statusBar.ts
